# jupyter-workbench

./: .gitignore  README.md  scripts.bash
_docs_/llm/: LLM architecture.drawio
data/: air-quality-station-2-particulate-matter-data-2018-19.csv
data/covid/: iso.json  time_series_covid19_deaths_global_narrow.csv
data/grafana/: scrape-data-2024-04-13 17_34_26.csv
docker/jupyter-data-science/: build.bash
docker/jupyter-data-science-py/: Dockerfile  docker-compose.yml  requirements.txt
docker/jupyter-llm/: .env  docker-compose.yml
docker/jupyter-ocr-tesseact-py/: Dockerfile  build.bash  docker-compose.yml
docker/jupyter-pyspark/: Dockerfile  docker-compose.yml
docker/jupyter-pyspark-diy/: Dockerfile  docker-compose.yml  requirements.txt
docker/jupyter-search/: .env  Dockerfile  docker-compose.yml
docker/jupyter-sparkmagic/: docker-compose.yml
notebooks/: Torch Benchmark.ipynb
notebooks/face/: face_detection.ipynb
notebooks/libs/: crawler-class.ipynb
notebooks/llm-kernel/: Embeddings with PgVector & OpenAI.ipynb  LangChain loading PDF.ipynb  LangChain loading text using PGVector.ipynb  OpenLLM.ipynb  transformer-on-mac.ipynb
notebooks/search-kernel/: Eland - ElasticSearch.ipynb  Llama index for ElasticSearch and LLM.ipynb  README.md  Semantic - ElasticSearch with OpenAI.ipynb  Semantic - ElasticSearch with SentenceTransformer.ipynb  Semantic - ElasticSearch.ipynb  pyproject.toml  requirements.txt
notebooks/search-kernel/libs/: elasticsearch.py  os.py
notebooks/search-kernel/tests/: test_elasticsearch.py  test_os.py
(+20 files in other folders)
